--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PinPoint</string>
+    <string name="title_activity_main_map">Map</string>
+    <string name="title_activity_base">BaseActivity</string>
 </resources>
